<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:title="@string/zram_size_title">

    <ListPreference
        android:key="zram_size"
        android:title="@string/zram_size_title"
        android:summary="@string/zram_size_summary"
        android:entries="@array/zram_size_entries"
        android:entryValues="@array/zram_size_values"
        android:defaultValue="-1" />
        
    <ListPreference
        android:key="zram_compression"
        android:title="@string/zram_compression_title"
        android:summary="@string/zram_compression_summary"
        android:entries="@array/zram_compression_entries"
        android:entryValues="@array/zram_compression_values"
        android:defaultValue="lz4" />
        
    <PreferenceCategory android:title="@string/advanced_settings">
        <com.xiaomi.settings.CustomSeekBarPreference
            android:key="swappiness"
            android:title="@string/swappiness_title"
            android:summary="@string/swappiness_summary"
            android:defaultValue="60"
            custom:interval="1"
            custom:showSign="false"
            custom:units="" />
    </PreferenceCategory>
</PreferenceScreen>
